--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dateformat": "^4.4.1",
     "diff-match-patch": "^1.0.5",
     "ignore": "^5.1.8",
-    "js-yaml": "^3.14.1"
+    "js-yaml": "^3.14.1",
+    "untildify": "^4.0.0"
   }
 }
