--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "codesync",
   "main": "./lib/codesync",
-  "version": "0.0.0",
-  "description": "A short description of your package",
+  "version": "1.0.0",
+  "description": "Sync your code changes as you make them",
   "keywords": [],
-  "repository": "https://github.com/atom/codesync",
+  "repository": "https://github.com/codesyncapp/codesync-vs",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0"
+    "atom": ">=1.0.0 <2.0.0",
+    "npm": "7.7.6",
+    "node": "15.13.0"
   },
   "dependencies": {
     "current-git-branch": "^1.1.0",
