--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "node": "15.13.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.927.0",
     "current-git-branch": "^1.1.0",
     "dateformat": "^4.4.1",
     "diff-match-patch": "^1.0.5",
     "ignore": "^5.1.8",
     "isbinaryfile": "^4.0.8",
     "js-yaml": "^3.14.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "untildify": "^4.0.0",
     "walk": "^2.3.14",
