--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "aws-sdk": "^2.927.0",
     "current-git-branch": "^1.1.0",
     "dateformat": "^4.4.1",
+    "detect-port": "^1.3.0",
     "diff-match-patch": "^1.0.5",
+    "express": "^4.17.1",
     "ignore": "^5.1.8",
     "isbinaryfile": "^4.0.8",
     "js-yaml": "^3.14.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "untildify": "^4.0.0",
