--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
+    "run-parallel": "^1.2.0",
     "untildify": "^4.0.0",
     "walk": "^2.3.14",
     "websocket": "^1.0.34"
