--- a/package.json
+++ b/package.json
@@ -37,8 +37,26 @@
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "run-parallel": "^1.2.0",
+    "ts-jest": "^27.0.5",
     "untildify": "^4.0.0",
     "walk": "^2.3.14",
     "websocket": "^1.0.34"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "babel-jest": "^27.1.0",
+    "jest": "^27.1.0",
+    "jest-fetch-mock": "^3.0.3"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "automock": false,
+    "collectCoverage": true,
+    "setupFiles": [
+      "./setupJest.js"
+    ]
   }
 }
