--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ignore": "^5.1.8",
     "isbinaryfile": "^4.0.8",
     "js-yaml": "^3.14.1",
+    "lockfile": "^1.0.4",
     "node-fetch": "^2.6.7",
     "run-parallel": "^1.2.0",
     "untildify": "^4.0.0",
