--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "ignore": "^5.1.8",
     "isbinaryfile": "^4.0.8",
     "js-yaml": "^3.14.1",
-    "lockfile": "^1.0.4",
     "node-fetch": "^2.6.7",
+    "proper-lockfile": "^4.1.2",
     "run-parallel": "^1.2.0",
     "untildify": "^4.0.0",
     "walk": "^2.3.14",
